--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -17,6 +17,330 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="20" data-price="49.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2PQqBPq"><img src="https://m.media-amazon.com/images/I/71wSuNVCtvL._SR400,400_.jpg" alt="True Wireless Earbuds Bluetooth 5.0 Headphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2PQqBPq">True Wireless Earbuds Bluetooth 5.0 Headphones, Sports in-Ear TWS Stereo Mini Headset w/Mic Extra Bass IPX5 Sweatproof Low Latency Instant Pairing...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $49.99</strong> using code:20STEVIES</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2PQqBPq">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="9.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LslgQ9"><img src="https://images-na.ssl-images-amazon.com/images/I/61yx6RqscfL._SX679_.jpg" alt="WALI Wall Outlet Shelf Standard" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LslgQ9">WALI Wall Outlet Shelf Standard Vertical Duplex GFCI Décor Outlet </a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $9.99</strong> using code:FFY2SFYQ</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2LslgQ9">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="49.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2UZI0WZ"><img src="https://images-na.ssl-images-amazon.com/images/I/71BPxklj8kL._SX522_.jpg" alt="Electric Water Kettle" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2UZI0WZ">Homever Kettle, Electric Water Kettle, Tea Kettle, Thermostatic Kettle with Adjustable Temperature Electric Cordless Glass Kettle</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $49.98</strong> using code:AZ2GDSAT</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2UZI0WZ">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="12.29">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JjSkqI"><img src="https://m.media-amazon.com/images/I/71HwrAGY5ML._SR400,400_.jpg" alt="Eda-Zen Cruncha ma-me Edamame Veggie Snack" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JjSkqI">Eda-Zen Cruncha ma-me Edamame Veggie Snack, Jalapeno, 0.7 Ounce (Pack of 8)</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $12.29</strong> using code:20CRUNCHVIP</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JjSkqI">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="14.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ydu5yO"><img src="https://m.media-amazon.com/images/I/71QBELlDWQL._SR400,400_.jpg" alt="BBQ Grill Gloves" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ydu5yO">BBQ Grill Gloves, 932℉ Heat Resistant Grilling Gloves, 14" Extremely Cooking Oven Mitts for Barbecue, Frying & Baking - Grill & Kitchen Accessories</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>25% off at $14.95</strong> using code:25UA969R</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Ydu5yO">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="34.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Jk2qYI"><img src="https://m.media-amazon.com/images/I/81rC-tMYcML._SR400,400_.jpg" alt="Electric Gooseneck Drip Kettle" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Jk2qYI">Procizion PROGEK 1 Liter Electric Gooseneck Drip Kettle, Silver</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>10% off at $34.97</strong> using code:10INTRO10</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Jk2qYI">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="38.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WqxVnn"><img src="https://m.media-amazon.com/images/I/91-qX19-OaL._SR400,400_.jpg" alt="Dog Car Seat Cover" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WqxVnn">Babyltrl Dog Car Seat Cover Waterproof Pet Seat Cover Nonslip Back Seat Cover for Cars Trucks and SUVS</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $38.99</strong> using code:30IVJHVF</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WqxVnn">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="17.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2vEsVzW"><img src="https://m.media-amazon.com/images/I/91aYRn2-hHL._SR400,400_.jpg" alt="Portable Artisan Coffee" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2vEsVzW">Muhlhaus | Portable Artisan Coffee | Compact Pour Overs | Turkish Kave | 8 Single Serve Pack | Ethically Sourced Specialty Grade Premium Coffee </a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $17.99</strong> using code:20SAP964</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2vEsVzW">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="23.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Jn9Ha3"><img src="https://m.media-amazon.com/images/I/71-QGz5ixOL._SR400,400_.jpg" alt="Camping Hammock" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Jn9Ha3">Camping Hammock, LAX Portable Double Durable Hammock Backpacking, Travel, Hiking, Beach, Yard</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>35% off at $23.99</strong> using code:35T9YN97</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Jn9Ha3">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="26.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Wzpu9L"><img src="https://m.media-amazon.com/images/I/61Iprx-PNxL._SR400,400_.jpg" alt="Smart Watch Bluetooth Fitness Tracker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Wzpu9L">Smart Watch Bluetooth Fitness Tracker, Qidoou Android iOS Compatible Smartwatch of SIM SD Card Slot, Waterproof Pedometer Sleep Calorie Monitor </a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $26.99</strong> using code:303E92AP</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Wzpu9L">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="15.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JrAXo5"><img src="https://m.media-amazon.com/images/I/71s1VEo7BPL._SR400,400_.jpg" alt="Magnetic Calendar" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JrAXo5">Magnetic Calendar for Refrigerator, Dry Erase Calendar, Large Magnetic White Board Monthly Planner...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $15.89</strong> using code:2019UK2N</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JrAXo5">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="16.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2PRRYc7"><img src="https://m.media-amazon.com/images/I/61v4X3aJKPL._SR400,400_.jpg" alt="Canvas Art" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2PRRYc7">Paint by Numbers 16 x 20 inch Canvas Art Kits DIY Oil Painting for Kids/Students/Adults Beginner...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $16.99</strong> using code:50ABAYLAND</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2PRRYc7">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="28.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2V2k9pz"><img src="https://m.media-amazon.com/images/I/51+rHm7XI8L._SR400,400_.jpg" alt="Amplifier Signal Booster" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2V2k9pz">HDTV Antenna, 2019 New Indoor Digital TV Antenna 60-90 Miles Range, Amplifier Signal Booster</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>70% off at $28.99</strong> using code:70XKX6S3</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2V2k9pz">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="24.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VRPwHS"><img src="https://m.media-amazon.com/images/I/61I+EYKsdnL._SR400,400_.jpg" alt="Bluetooth Headphones Sport" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VRPwHS">Bluetooth Headphones Sport, HiFi Stereo with Bass Wireless Earbuds with Mic, Noise Cancelling</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $24.99</strong> using code:50VASR99</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VRPwHS">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="69.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VO0o9J"><img src="https://m.media-amazon.com/images/I/51SPhylR5UL._SR400,400_.jpg" alt="Record Player-13 in 1 Turntable" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VO0o9J">Record Player-13 in 1 Turntable with Speakers Vinyl Recording LP Bluetooth USB TF Card FM Radio Aux Input RCA Line Out and Headphone Jack</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $69.99</strong> using code:0TH327Q</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VO0o9J">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="57.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VMTpOd"><img src="https://m.media-amazon.com/images/I/61Mvq9VFMmL._SR400,400_.jpg" alt="Douni 25W Portable Wireless Bluetooth Speaker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VMTpOd">Douni 25W Portable Wireless Bluetooth Speaker (A5) with Power Adapter,Deep Bass Stereo Sound</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $57.99</strong> using code:503GKT71</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VMTpOd">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="24.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JljAVN"><img src="https://m.media-amazon.com/images/I/71DA9n-bpmL._SR400,400_.jpg" alt="BassPal SoundRo X3 Portable Bluetooth Speaker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JljAVN">BassPal SoundRo X3 Portable Bluetooth Speaker with Loud Stereo Sound, Enhanced Bass, 24-Hour Playtime, 66 ft Bluetooth Range</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $24.99</strong> using code:50AWL6CI</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JljAVN">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="52.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2H5ksek"><img src="https://m.media-amazon.com/images/I/61tTh7alr3L._SR400,400_.jpg" alt="ZoeeTree True Wireless Earbuds" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2H5ksek">ZoeeTree True Wireless Earbuds Bluetooth 5.0 Headphones with 100Hs Playtime, Lightweight Headsets Noise Cancelling Bluetooth Earbuds</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $52.99</strong> using code:30REDUCE</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2H5ksek">Use Code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="39" data-price="23.08">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Ls0P5O"><img src="https://images-na.ssl-images-amazon.com/images/I/61fAUjYYD8L._SX522_.jpg" alt="" /></a>
