--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -125,10 +125,10 @@
 .cu_wrap .cu_box{margin:50px 0;border-bottom:1px solid #ccc;padding-bottom:50px;}
 .cu_wrap .num{float:left;width:200px;text-align:center;}
 .cu_wrap .num>p{font-size:100px;border-bottom:1px solid #3d3d3d;display:inline-block;line-height:1;}
-.cu_wrap .pic{float:left;width:450px;margin-right:40px;position:relative;}
+.cu_wrap .pic{float:left;width:450px;height:300px;margin-right:40px;position:relative;}
 .cu_wrap .pic .start{position:absolute;top:10px;right:10px;}
 .cu_wrap .pic .start img{width:50px;}
-.cu_wrap .pic>a>img{width:100%;}
+.cu_wrap .pic>a>img{width:100%;height:100%;object-fit:contain;}
 .cu_wrap .inner{float:left;width:500px;color:#616161;font-family: 'Montserrat', sans-serif;}
 .cu_wrap .inner>strong{font-size:26px;display:block;line-height:1.2;font-weight:100;}
 .cu_wrap .inner>strong>span{display:none;}
