--- a/app/views/blogs/blog_02.html.erb
+++ b/app/views/blogs/blog_02.html.erb
@@ -4,14 +4,14 @@
   <div class="blog_02 clearfix">
     <div class="wrap">
       
-      <div class="detitle for_blog">
-
-      </div>
+      <!-- <div class="detitle for_blog">
+        <%= @lotto %>
+      </div> -->
       
       <div class="blog_wrap clearfix">
         <div class="cnt_wrap clearfix">
           <div class="image_box">
-            <img src="">
+            <img src="https://t1.daumcdn.net/cfile/tistory/995747355CD318F403">
           </div>
           <div class="inner">
             <strong>STEP.1</strong>
@@ -24,7 +24,7 @@
 
         <div class="cnt_wrap clearfix">
           <div class="image_box">
-            <img src="https://i.pinimg.com/564x/55/97/59/5597591d83725207abc6b92f12fb9659.jpg">
+            <img src="https://t1.daumcdn.net/cfile/tistory/9957A3355CD318F503">
           </div>
           <div class="inner">
             <strong>STEP.2</strong>
@@ -34,7 +34,7 @@
 
         <div class="cnt_wrap clearfix">
           <div class="image_box">
-            <img src="https://i.pinimg.com/564x/55/97/59/5597591d83725207abc6b92f12fb9659.jpg">
+            <img src="https://t1.daumcdn.net/cfile/tistory/9957BD355CD318F603">
           </div>
           <div class="inner">
             <strong>STEP.3</strong>
@@ -45,7 +45,7 @@
 
         <div class="cnt_wrap clearfix">
           <div class="image_box">
-            <img src="https://i.pinimg.com/564x/55/97/59/5597591d83725207abc6b92f12fb9659.jpg">
+            <img src="https://t1.daumcdn.net/cfile/tistory/999C5D415CD31AAB05">
           </div>
           <div class="inner">
             <strong>STEP.4</strong>
@@ -56,7 +56,7 @@
 
         <div class="cnt_wrap clearfix">
           <div class="image_box">
-            <img src="https://i.pinimg.com/564x/55/97/59/5597591d83725207abc6b92f12fb9659.jpg">
+            <img src="https://t1.daumcdn.net/cfile/tistory/99A0A2415CD31AAB04">
           </div>
           <div class="inner">
             <strong>STEP.5</strong>
@@ -66,7 +66,7 @@
 
         <div class="cnt_wrap clearfix">
           <div class="image_box">
-            <img src="https://i.pinimg.com/564x/55/97/59/5597591d83725207abc6b92f12fb9659.jpg">
+            <img src="https://t1.daumcdn.net/cfile/tistory/99A0C7415CD31AAB04">
           </div>
           <div class="inner">
             <strong>STEP.6</strong>
@@ -78,7 +78,7 @@
 
         <div class="cnt_wrap clearfix">
           <div class="image_box">
-            <img src="">
+            <img src="https://t1.daumcdn.net/cfile/tistory/99A0FF415CD31AAC04">
           </div>
           <div class="inner">
             <strong>STEP.1</strong>
@@ -89,7 +89,7 @@
 
         <div class="cnt_wrap clearfix">
           <div class="image_box">
-            <img src="https://i.pinimg.com/564x/55/97/59/5597591d83725207abc6b92f12fb9659.jpg">
+            <img src="">
           </div>
           <div class="inner">
             <strong>STEP.2</strong>
@@ -99,7 +99,7 @@
 
         <div class="cnt_wrap clearfix">
           <div class="image_box">
-            <img src="https://i.pinimg.com/564x/55/97/59/5597591d83725207abc6b92f12fb9659.jpg">
+            <img src="https://t1.daumcdn.net/cfile/tistory/99A158415CD31AAC04">
           </div>
           <div class="inner">
             <strong>STEP.3</strong>
@@ -109,7 +109,7 @@
 
         <div class="cnt_wrap clearfix">
           <div class="image_box">
-            <img src="https://i.pinimg.com/564x/55/97/59/5597591d83725207abc6b92f12fb9659.jpg">
+            <img src="https://t1.daumcdn.net/cfile/tistory/99A153415CD31AAC04">
           </div>
           <div class="inner">
             <strong>STEP.4</strong>
@@ -119,7 +119,7 @@
 
         <div class="cnt_wrap clearfix">
           <div class="image_box">
-            <img src="https://i.pinimg.com/564x/55/97/59/5597591d83725207abc6b92f12fb9659.jpg">
+            <img src="https://t1.daumcdn.net/cfile/tistory/99A170415CD31AAD04">
           </div>
           <div class="inner">
             <strong>STEP.5</strong>
@@ -129,7 +129,7 @@
 
         <div class="cnt_wrap clearfix">
           <div class="image_box">
-            <img src="https://i.pinimg.com/564x/55/97/59/5597591d83725207abc6b92f12fb9659.jpg">
+            <img src="">
           </div>
           <div class="inner">
             <strong>STEP.6</strong>
