--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -17,6 +17,186 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="30" data-price="26.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VUE6mT"><img src="https://m.media-amazon.com/images/I/61yttjaaFRL._SR400,400_.jpg" alt="SZOKLED Remote Control LED Lights Bar" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VUE6mT">SZOKLED Remote Control LED Lights Bar, Wireless Portable LED Under Cabinet Lighting, Dimmable Closet Light Stair Night Lights Battery Operated...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $26.98</strong> using code:30E7X81A</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VUE6mT">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YggEOl"><img src="https://m.media-amazon.com/images/I/51RHCb2h9dL._SR400,400_.jpg" alt="Smart Plug, Mini Wi-Fi Socket Outlet Compatible" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YggEOl">Smart Plug, Mini Wi-Fi Socket Outlet Compatible with Alexa Echo Compatible with Google Home Assistant IFTTT, Remote Control Your Devices</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>60% off at $39.99</strong> using code:60MRXFW2</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YggEOl">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="27.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2PVpLBf"><img src="https://m.media-amazon.com/images/I/51bXEpu4otL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2PVpLBf">B2ocled Retro Industrial Black Pendant Lighting,Barn Farmhouse Pendant Light E26/E27 Base for Kitchen Island...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>10% off at $27.99</strong> using code:101OHOJF</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2PVpLBf">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="27.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ykct42"><img src="https://m.media-amazon.com/images/I/61HbtDsQq3L._SR400,400_.jpg" alt="VEENAX Pogo Wireless Headphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ykct42">VEENAX Pogo Wireless Headphones, Magnetic Bluetooth Sport Earphones for Running Workout...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>70% off at $27.99</strong> using code:70VEEPOGO</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Ykct42">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="38.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JvH7Dx"><img src="https://m.media-amazon.com/images/I/719iPHHsTDL._SR400,400_.jpg" alt="Zettaguard 4K x 2K 4 Port 4 x 1 HDMI Switch" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JvH7Dx">Zettaguard 4K x 2K 4 Port 4 x 1 HDMI Switch with PIP and IR Wireless Remote Control, HDMI Switcher Hub Port Switches...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>10% off at $38.95</strong> using code:promo_code</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JvH7Dx">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="29.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VSq8C6"><img src="https://m.media-amazon.com/images/I/71DA9n-bpmL._SR400,400_.jpg" alt="BassPal SoundRo X3 Portable Bluetooth Speaker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VSq8C6">BassPal SoundRo X3 Portable Bluetooth Speaker with Loud Stereo Sound, Enhanced Bass, 24-Hour Playtime...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $29.99</strong> using code:505VXGY2</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VSq8C6">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="28.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2E0WMHh"><img src="https://m.media-amazon.com/images/I/61pzakYIOQL._SR400,400_.jpg" alt="Computer Speakers" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2E0WMHh">Computer Speakers, Smalody PC Wired Computer Sound Bar,7 Color Pulsation LED Flicker Stereo USB Powered Mini Soundbar</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $28.99</strong> using code:30UDMY1O</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2E0WMHh">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="percentage" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YiZdNc"><img src="https://m.media-amazon.com/images/I/61DiBvCWtSL._SR400,400_.jpg" alt="SIQIWO Bluetooth Headphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>percentage% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YiZdNc">SIQIWO Bluetooth Headphones, HD Stereo in Ear Wireless Earbuds, IPX6 Waterproof Magnetic Neckband Earphone</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>percentage% off at $19.99</strong> using code:1559Q4XG</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YiZdNc">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="179.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VurxPG"><img src="https://m.media-amazon.com/images/I/51eJvZB-RLL._SR400,400_.jpg" alt="Toshiba EC042A5C-SS Microwave Oven" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VurxPG">Toshiba EC042A5C-SS Microwave Oven with Convection Function Smart Sensor and LED Lighting 1.5 cu. ft./1000W Stainless Steel...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $179.99</strong> using code:promo_code</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VurxPG">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Yp6fjD"><img src="https://m.media-amazon.com/images/I/712UroFJfXL._SR400,400_.jpg" alt="Chefast Stainless Steel Drinking Straws" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Yp6fjD">Chefast Stainless Steel Drinking Straws - 4x2 Combo Kit - Reusable Metal Straws for Everything From 30 oz Yeti Tumblers to Thick Smoothies</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>45% off at $14.99</strong> using code:45OUSU9Y</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Yp6fjD">Use Code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="50" data-price="19.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2vNnqiw"><img src="https://m.media-amazon.com/images/I/61YWYLLOSEL._SR400,400_.jpg" alt="Bluetooth Speakers" /></a>
