--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -1,172 +1,3 @@
-
-// Place all the styles related to the home controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
-
-.noscroll {
-  overflow: hidden;
-}
-
-.m_header {
-  min-height: 100vh;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.m_header .far {
-  font-size: 3rem;
-}
-
-.m_header .button_content {
-  max-width: 475px;
-  width: 100%;
-  height: 65px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.m_header .btn_clear {
-  height: 65px;
-  width: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
-}
-.m_header .btn_black {
-  background: black;
-  color: white;
-  height: 65px;
-  width: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.modal_overlay {
-  position: fixed;
-  z-index: 400;
-  display: flex;
-  overflow: hidden;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.4);
-  color: white;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  visibility: hidden;
-  opacity: 0;
-  transition: all 0.25s;
-}
-.modal_overlay .m_content {
-  max-width: 400px;
-  -webkit-box-shadow: 0px 2px 37px 0px rgba(0, 0, 0, 0.14);
-  -moz-box-shadow: 0px 2px 37px 0px rgba(0, 0, 0, 0.14);
-  box-shadow: 0px 2px 37px 0px rgba(0, 0, 0, 0.14);
-  width: 100%;
-  height: 300px;
-  position: relative;
-  z-index: 401;
-  background-color: white;
-  color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 20px;
-}
-.modal_overlay .m_content h4 {
-  font-size: 3rem;
-  text-transform: uppercase;
-  margin: 0;
-}
-.modal_overlay .m_content .offertext {
-  border: 1px solid black;
-  max-width: 220px;
-  width: 100%;
-  padding: 10px;
-  text-align: center;
-  margin: 20px 0;
-}
-.modal_overlay .m_content .offertext p {
-  margin: 0;
-  font-size: 1.15rem;
-}
-.modal_overlay .m_content p {
-  margin: 0;
-  font-size: 0.9rem;
-  font-weight: 300;
-}
-.modal_overlay .active_animation {
-  -webkit-animation-name: fadeIn;
-  animation-name: fadeIn;
-  animation-iteration-count: 1;
-  -webkit-iteration-count: 1;
-  -webkit-animation-duration: 1.25s;
-  animation-duration: 1.25s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-}
-.modal_overlay .close_modal {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  width: 60px;
-  height: 60px;
-  cursor: pointer;
-}
-.modal_overlay .close_modal .closex:after {
-  content: "";
-  height: 20px;
-  border-left: 2px solid black;
-  position: absolute;
-  right: 13px;
-  transform: rotate(45deg);
-}
-.modal_overlay .close_modal .closex:before {
-  content: "";
-  height: 20px;
-  border-left: 2px solid black;
-  position: absolute;
-  right: 13px;
-  transform: rotate(-45deg);
-}
-
-.modal_active {
-  visibility: visible;
-  opacity: 1;
-}
-
-.open_modal {
-  cursor: pointer;
-}
-
-@-webkit-keyframes "fadeIn" {
-  0% {
-    bottom: -100px;
-  }
-  100% {
-    bottom: 0;
-  }
-}
-@keyframes "fadeIn" {
-  0% {
-    bottom: -100px;
-  }
-  100% {
-    bottom: 0;
-  }
-}
-
-
-
 #goup{position:fixed;bottom:10px;right:10px;display:none;}
 #goup img{width:50px;}
 
@@ -286,7 +117,7 @@
   .coupons .coupons_wrap .card .info_box{font-family: 'Montserrat', sans-serif;float:left;width:26%;height:100px;padding:1.5% 0;margin:0 1%;text-align:center;background:#fff;color:#000;}
   .coupons .coupons_wrap .card .img_box{float: left;width: 20%;height: 167px;padding: 1.5%;}
   .coupons .coupons_wrap .card .img_box img{width:100%;height:100%;object-fit:contain;}
-  .coupons .coupons_wrap .card .info_box a{text-decoration:none;color:#000;display:block;}
+  .coupons .coupons_wrap .card .info_box a{text-decoration:none;color:#fff;display:block;background:#000;}
   .coupons .coupons_wrap .card .info_box p{font-size:70px;font-weight:bold;line-height:1.2;margin:3px 20px;}
   .coupons .coupons_wrap .card .info_box em{}
   .coupons .coupons_wrap .card .inner{float:left;width:57%;padding:1.5%;font-family: 'Montserrat', sans-serif;font-weight:400;}
