--- a/app/assets/stylesheets/blog.css.erb
+++ b/app/assets/stylesheets/blog.css.erb
@@ -2,7 +2,7 @@
 .blog_02 .blog_wrap{}
 .blog_02 .blog_wrap .cnt_wrap{margin-bottom:70px;border-bottom:1px solid #ccc;padding-bottom:20px;}
 .blog_02 .blog_wrap .cnt_wrap .image_box{float:left;width:53%;margin-right:2%;}
-.blog_02 .blog_wrap .cnt_wrap .image_box img{width:100%;}
+.blog_02 .blog_wrap .cnt_wrap .image_box img{width:100%;-webkit-perspective:1;}
 .blog_02 .blog_wrap .cnt_wrap .inner{float:left;width:44%;margin:0 0 0 1%;}
 .blog_02 .blog_wrap .cnt_wrap .inner h2{line-height:1.1;margin-bottom:10px;}
 .blog_02 .blog_wrap .cnt_wrap .inner p{}
