--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -41,7 +41,7 @@
         
         <div class="lt_sort_box clearfix">
           <ul class="clearfix">
-            <li><a href="/deals/promo_codes" class="pure-button">All</a></li>
+            <li><a href="/deals/promo_codes" class="pure-button">All Codes</a></li>
             <li><a href="#" class="pure-button sort1">Price High</a></li>
             <li><a href="#" class="pure-button sort2">Price Low</a></li>
             <li><a href="#" class="pure-button sort3">Sale High</a></li>
@@ -56,7 +56,7 @@
         
         <div class="sort_box clearfix">
           <ul>
-            <li><a href="/deals/promo_codes" class="pure-button">All</a></li>
+            <li><a href="/deals/promo_codes" class="pure-button">All Codes</a></li>
             <li><a href="#" class="pure-button sort1">Price High</a></li>
             <li><a href="#" class="pure-button sort2">Price Low</a></li>
             <li><a href="#" class="pure-button sort3">Sale High</a></li>
