--- a/app/views/recommends/index.html.erb
+++ b/app/views/recommends/index.html.erb
@@ -17,11 +17,11 @@
       
         <div class="lt_cnt deal">
           <h2>Featured</h2>
-          <div class="note">
+          <!-- <div class="note">
             <ul>
               <li>Our website contains affiliate link which means that if you click on one of the product links and buy we’ll receive a small commission. This help supports us and allows us to continue to keep finding and sharing good deals.</li>
             </ul>
-          </div>
+          </div> -->
           <button class="gnb_open"><img src="<%=asset_path 'open_black.png' %>" alt="모바일 메뉴 열기" /></button>
           <div class="sm_pc">
             
