--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -20,14 +20,15 @@
   .codes .lt_cnt .lt_sort_box{display:none;}
   .codes .lt_cnt .lt_sort_box.on{display:block;position:fixed;top:80px;width:270px;}
   .codes .lt_cnt .lt_sort_box p{border-bottom:1px solid;}
-  .codes .lt_cnt .lt_sort_box ul{background:#000;padding:10px;}
-  .codes .lt_cnt .lt_sort_box ul li{float:left;width:100%;margin:1% 0;border:1px solid #fff;background:#000}
-  .codes .lt_cnt .lt_sort_box ul li a{padding:5px;text-decoration:none;color:#fff;display:block;background:#000;text-align:center;}
+  .codes .lt_cnt .lt_sort_box ul{}
+  .codes .lt_cnt .lt_sort_box ul li{float:left;width:100%;margin:1% 0;}
+  .codes .lt_cnt .lt_sort_box ul li a{font-family: 'Anton', sans-serif;line-height:1.1;font-size:45px;text-decoration:none;color:#000;display:block;text-align:center;}
   .codes .lt_cnt .lt_sort_box ul li a:hover{background:#fff;color:#000;}
   
   .codes .rt_cnt .sort_box{margin-bottom:20px;}
-  .codes .rt_cnt .sort_box ul li{float:left;width:100px;margin:0 5px;border:1px solid;border-radius:10px;}
-  .codes .rt_cnt .sort_box ul li a{border-radius:10px;text-decoration:none;color:#000;display:block;background:#fff;text-align:center;padding:5px;}
+  .codes .rt_cnt .sort_box ul li{float:left;width:100px;margin:0 5px;}
+  .codes .rt_cnt .sort_box ul li a{font-size:20px;font-family: 'Anton', sans-serif;line-height:1.1;text-decoration:none;color:#000;display:block;text-align:center;padding:5px;}
+  .codes .rt_cnt .sort_box ul li a:hover{background:#000;color:#fff;}
 
   .codes .card_wrap{margin:20px 0 0 0;}
   .codes .card_wrap .card{border-bottom:1px solid #ccc;margin:0 0 15px 0;padding-bottom:10px;}
@@ -71,7 +72,8 @@
  
   .codes .card_wrap{/*column-width:170px;*/column-gap:5px;column-count:1;}
   .codes .card_wrap .card{display:inline-block;margin:0;margin-bottom:30px;padding:5px;border-bottom:1px solid #ddd;}
-  .codes .card_wrap .card .image_box img{width:100%;}
+  .codes .card_wrap .card .image_box{text-align:center;}
+  .codes .card_wrap .card .image_box img{width:70%;}
   .codes .card_wrap .card .inner{padding:7px;font-family: 'Montserrat', sans-serif;font-weight:400}
   .codes .card_wrap .card .inner>.regular{font-size:13px;border-bottom:2px solid #000;}
   .codes .card_wrap .card .inner>.regular>em{background:#000;padding:0 5px;color:#fff;}
@@ -85,7 +87,7 @@
   .codes .card_wrap .card .inner>.code_high>p{display:inline;border-bottom:0.4em solid rgba(255,0,0,0.2);position:relative;}
   .codes .card_wrap .card .inner>.code_high>p>span{font-weight:400;position:relative;top:0.4em;}
   .codes .card_wrap .card .deal_btn{float:none;width:100%;padding:7px;margin-top:10px;}
-  .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#616161;margin:20px 0 0 0;border:1px solid;padding:3px 20px;}
+  .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#616161;margin:20px 0 0 0;border:1px solid;padding:7px 20px;}
 }
 
 @media screen and (max-width:400px){
