--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -45,10 +45,10 @@
 .featured .sm_pc .search_bar{position:relative;margin-top:20px;border:1px solid #ccc;}
 .featured .sm_pc .search_bar .form-control{padding:5px 0;width:80%;border:none;}
 .featured .sm_pc .search_bar img{position:absolute;top:3px;right:5px;}
-.featured .sm_pc .filter-search{margin-top:10px;background:#000;padding:5px 10px;}
-.featured .sm_pc .filter-search li{border:1px solid #fff;margin:5px 0;text-align:center;}
+.featured .sm_pc .filter-search{margin-top:10px;padding:5px 10px;}
+.featured .sm_pc .filter-search li{margin:5px 0;text-align:center;}
 .featured .sm_pc .filter-search li a{text-decoration:none;}
-.featured .sm_pc .filter-button{font-weight:300;padding:5px 10px;font-size:17px;color:#fff;width:100%;}
+.featured .sm_pc .filter-button{font-family: 'Anton', sans-serif;line-height:1.1;font-size:45px;color:#000;width:100%;}
 .featured .sm_pc .filter-button:hover{background:#fff;color:#000;}
 
 .featured .gift_guide{border-bottom:1px solid #ccc;padding-bottom:10px;margin-bottom:20px;}
